[package]
name = "random-website-redirect"
version = "1.0.0"
authors = ["Natsumi H. <39241405+NatsumiHB@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
actix-web = "4.0.0-beta.5"
actix-rt = "2.2.0"
anyhow = "1.0.40"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
